tests/invalid/for_non_iterable/main.py
def run_case() -> None:
    x: int = 5

    for i in x:
        print(i)

if __name__ == "__main__":
    run_case()
